<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@id/postsFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/posts" />
        <item
            android:id="@id/addNewPostFragment"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/new_post" />
        <item
            android:id="@id/Profile_recyclerview"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/profile" />
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="@string/tools" />-->
    </group>

    <!--<item android:title="@string/communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="@string/send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
